# funbeav

./: MANIFEST  pyproject.toml  setup.py
funbeav.egg-info/: PKG-INFO  top_level.txt
funbeav_package.egg-info/: PKG-INFO  SOURCES.txt
logic/: __init__.py  main.py
