[tool.poetry]
name = "funbeav_package"
version = "0.1.0"
description = ""
authors = ["Ivan Sidorov <sidorov_i@rocketdata.io>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.23.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
